lib_LTLIBRARIES = libgltext.la

include_HEADERS = \
	gltext.h

libgltext_la_SOURCES = \
	gltext.cpp \
	AbstractRenderer.cpp \
	AbstractRenderer.h \
	BitmapRenderer.cpp \
	BitmapRenderer.h \
	FTFont.cpp \
	FTFont.h \
	FTGlyph.cpp \
	FTGlyph.h \
	FTLibrary.cpp \
	FTLibrary.h \
	GLGlyph.h \
	GLPixelGlyph.cpp \
	GLPixelGlyph.h \
	GlyphCache.h \
	InterfaceImpl.h \
	PixmapRenderer.cpp \
	PixmapRenderer.h

libgltext_la_LDFLAGS = \
	-release $(VERSION)

ligltext_la_CFLAGS = \
	-Wall
